fix `alignment` and `resize` issue

--- a/src/plugins/blockStyleFnPlugin.css
+++ b/src/plugins/blockStyleFnPlugin.css
@@ -1,55 +1,56 @@
 .figure-image-right {
   float: right;
-  width: 50%;
 
   /* 需要指定`position`否则figure-image无法被点中 */
   position: relative;
   clear: both;
   outline: 0;
+  margin: 0;
 }
 
 .figure-image-right-fill {
   float: right;
-  width: 50%;
   margin-right: -150px;
 
   /* 需要指定`position`否则figure-image无法被点中 */
   position: relative;
   clear: both;
   outline: 0;
+  z-index: 1;
+  margin: 0;
+
 }
 
 .figure-image-left {
   float: left;
-  width: 50%;
 
   /* 需要指定`position`否则figure-image无法被点中 */
   position: relative;
   clear: both;
   outline: 0;
+  z-index: 1;
+  margin: 0;
 }
 
 .figure-image-left-fill {
   float: left;
-  width: 50%;
   margin-left: -150px;
 
   /* 需要指定`position`否则figure-image无法被点中 */
   position: relative;
   clear: both;
   outline: 0;
+  z-index: 1;
+  margin: 0;
 }
 
 .figure-image-center {
-  width: 100%;
-
   /* 需要指定`position`否则figure-image无法被点中 */
   position: relative;
   clear: both;
   outline: 0;
-  margin: auto;
+  margin-left: auto;
+  margin-right: auto;
   box-sizing: border-box;
-  display: flex;
-  justify-content: center;
 }
 
